test: LambdaTest
missing:
- lambda_type_is_inferred_on_return_type
- captured_variables_need_to_be_effectively_final